RESOLVED FIXED41012
REGRESSION (r61548): PLT is almost 1.5% slower, Google page cycler slower
https://bugs.webkit.org/show_bug.cgi?id=41012
Summary REGRESSION (r61548): PLT is almost 1.5% slower, Google page cycler slower
mitz
Reported 2010-06-22 14:19:03 PDT
As discussed extensively in bug 10228, r61548 has caused a measurable regression in layout performance. Patch forthcoming.
Attachments
Remove a redundant call to RenderText::width() (3.08 KB, patch)
2010-06-22 14:51 PDT, mitz
andersca: review+
mitz
Comment 1 2010-06-22 14:20:11 PDT
mitz
Comment 2 2010-06-22 14:51:37 PDT
Created attachment 59417 [details] Remove a redundant call to RenderText::width()
mitz
Comment 3 2010-06-22 15:12:24 PDT
Note You need to log in before you can comment on or make changes to this bug.