<rdar://problem/8119403> REGRESSION (r61548): PLT is almost 1.5% slower, Google page cycler slower https://bugs.webkit.org/show_bug.cgi?id=41012

Reviewed by Anders Carlsson.

* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::computeHorizontalPositionsForLine): Removed a redundant statement that was
left over in the original patch and resulted in double the calls to RenderText::width() here.
(WebCore::RenderBlock::findNextLineBreak): Changed the order of evaluating conditions for a
potential speedup.



Canonical link: https://commits.webkit.org/52637@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61629 268f45cc-cd09-0410-ab3c-d52691b4dbfc